chore: updated docs
